[gd_scene load_steps=17 format=4 uid="uid://dt2nuj67k2ely"]

[ext_resource type="Script" path="res://Scripte/main_menu.gd" id="1_3we5x"]
[ext_resource type="Script" path="res://Scripte/main_menu_parallax.gd" id="1_5lft7"]
[ext_resource type="Texture2D" uid="uid://knake7jkprwf" path="res://Sprites/Prototyping Assets/bg layer 1.png" id="1_k61tw"]
[ext_resource type="Texture2D" uid="uid://cnww7aapx5xvw" path="res://Sprites/Prototyping Assets/mountainsgrey.png" id="2_8pq3r"]
[ext_resource type="Texture2D" uid="uid://276m072vdkyn" path="res://Sprites/Prototyping Assets/mountainsgray.png" id="3_428jr"]
[ext_resource type="Texture2D" uid="uid://de16g1bgi8pqw" path="res://Sprites/Prototyping Assets/mountainsblack.png" id="4_g4ppa"]
[ext_resource type="Texture2D" uid="uid://k3dw0jfdylj3" path="res://Sprites/Prototyping Assets/Ground_Tiles.png" id="5_bso8f"]
[ext_resource type="PackedScene" uid="uid://47t4f3dy208j" path="res://Szenen/parallax_background_prototyp.tscn" id="7_xtpgq"]
[ext_resource type="Script" path="res://Scripte/blood_timer_ui.gd" id="10_wl1dn"]
[ext_resource type="Texture2D" uid="uid://d2bdxlhqgg0fm" path="res://Sprites/Prototyping Assets/Phiole_Empty.png" id="11_6qbs6"]
[ext_resource type="FontFile" uid="uid://d0g3kk1x8fhaf" path="res://Sprites/Prototyping Assets/MGS2.ttf" id="11_kqba4"]
[ext_resource type="Texture2D" uid="uid://dy18t6thrb1ky" path="res://Sprites/Prototyping Assets/Phiole_Full.png" id="12_bnk7l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bs0jc"]
texture = ExtResource("5_bso8f")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_t8g7d"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_bs0jc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_te6gn"]
texture = ExtResource("5_bso8f")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_34k6y"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_te6gn")

[node name="MainMenuParallax" type="Node2D"]
script = ExtResource("1_3we5x")

[node name="ParallaxAtHome" type="Node2D" parent="."]

[node name="BGGrey" type="TextureRect" parent="ParallaxAtHome"]
offset_top = -145.0
offset_right = 640.0
offset_bottom = 405.0
scale = Vector2(1, 1.4)
texture = ExtResource("1_k61tw")

[node name="BGMountainGrey" type="TextureRect" parent="ParallaxAtHome"]
texture_filter = 1
offset_right = 640.0
offset_bottom = 384.0
texture = ExtResource("2_8pq3r")

[node name="ColorRect" type="ColorRect" parent="ParallaxAtHome"]
offset_top = 365.0
offset_right = 640.0
offset_bottom = 405.0
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="BGMountainGray" type="TextureRect" parent="ParallaxAtHome"]
texture_filter = 1
offset_top = 20.0
offset_right = 640.0
offset_bottom = 404.0
texture = ExtResource("3_428jr")

[node name="BGMountainBlack" type="TextureRect" parent="ParallaxAtHome"]
visible = false
texture_filter = 1
offset_right = 640.0
offset_bottom = 384.0
texture = ExtResource("4_g4ppa")

[node name="MovingBackground" type="TileMapLayer" parent="ParallaxAtHome"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAnAP//AAAEAAEAAAAnAAAAAAAEAAEAAAAnAAEAAAAEAAEAAAAnAAIAAAAEAAEAAAAnAAMAAAAEAAEAAAAnAAQAAAAEAAEAAAAnAAUAAAAEAAEAAAAnAAYAAAAEAAEAAAAnAAcAAAAEAAEAAAAnAAgAAAAEAAEAAAAnAAkAAAAEAAEAAAAnAAoAAAAEAAEAAAAnAAsAAAAEAAEAAAAnAAwAAAAEAAEAAAAnAA0AAAAEAAEAAAAnAA4AAAAEAAEAAAAnAA8AAAAEAAEAAAAnABAAAAAEAAEAAAAnABEAAAAEAAEAAAAnABIAAAAEAAEAAAAnABMAAAAEAAEAAAAnABQAAAAEAAEAAAAnABUAAAAEAAEAAAAnABYAAAAEAAEAAAAnABcAAAAEAAEAAAAnABgAAAAEAAEAAAAAAPz/AAAEAAAAAAABAPz/AAAEAAAAAAACAPz/AAAEAAAAAAADAPz/AAAEAAAAAAAEAPz/AAAEAAAAAAAFAPz/AAAEAAAAAAAGAPz/AAAEAAAAAAAHAPz/AAAEAAAAAAAIAPz/AAAEAAAAAAAJAPz/AAAEAAAAAAAKAPz/AAAEAAAAAAALAPz/AAAEAAAAAAAMAPz/AAAEAAAAAAANAPz/AAAEAAAAAAAOAPz/AAAEAAAAAAAPAPz/AAAEAAAAAAAQAPz/AAAEAAAAAAARAPz/AAAEAAAAAAASAPz/AAAEAAAAAAATAPz/AAAEAAAAAAAUAPz/AAAEAAAAAAAVAPz/AAAEAAAAAAAWAPz/AAAEAAAAAAAXAPz/AAAEAAAAAAAYAPz/AAAEAAAAAAAZAPz/AAAEAAAAAAAaAPz/AAAEAAAAAAAbAPz/AAAEAAAAAAAcAPz/AAAEAAAAAAAdAPz/AAAEAAAAAAAeAPz/AAAEAAAAAAAfAPz/AAAEAAAAAAAgAPz/AAAEAAAAAAAhAPz/AAAEAAAAAAAiAPz/AAAEAAAAAAAjAPz/AAAEAAAAAAAkAPz/AAAEAAAAAAAlAPz/AAAEAAAAAAAmAPz/AAAEAAAAAAAnAPz/AAAEAAAAAAAoAPz/AAAEAAAAAAApAPz/AAAEAAAAAAD///z/AAAEAAAAAAD+//z/AAAEAAAAAAD9//z/AAAEAAAAAAD8//z/AAAEAAAAAAAqAPz/AAAEAAAAAAArAPz/AAAEAAAAAAArAP3/AAAEAAEAAAArAP7/AAAEAAEAAAArAP//AAAEAAEAAAArAAAAAAAEAAEAAAArAAEAAAAEAAEAAAArAAIAAAAEAAEAAAArAAMAAAAEAAEAAAArAAQAAAAEAAEAAAArAAUAAAAEAAEAAAArAAYAAAAEAAEAAAArAAcAAAAEAAEAAAArAAgAAAAEAAEAAAArAAkAAAAEAAEAAAArAAoAAAAEAAEAAAArAAsAAAAEAAEAAAArAAwAAAAEAAEAAAArAA0AAAAEAAEAAAArAA4AAAAEAAEAAAArAA8AAAAEAAEAAAArABAAAAAEAAEAAAArABEAAAAEAAEAAAArABIAAAAEAAEAAAArABMAAAAEAAEAAAArABQAAAAEAAEAAAArABUAAAAEAAEAAAArABYAAAAEAAEAAAArABcAAAAEAAEAAAArABgAAAAEAAEAAAArABkAAAAEAAEAAAArABoAAAAEAAEAAAArABsAAAAEAAIAAAAqABsAAAADAAIAAAApABsAAAADAAIAAAAoABsAAAADAAIAAAAnABsAAAADAAIAAAAmABsAAAADAAIAAAAlABsAAAADAAIAAAAkABsAAAADAAIAAAAjABsAAAADAAIAAAAiABsAAAADAAIAAAAhABsAAAADAAIAAAAgABsAAAADAAIAAAAfABsAAAADAAIAAAAeABsAAAADAAIAAAAdABsAAAADAAIAAAAcABsAAAADAAIAAAAbABsAAAADAAIAAAAaABsAAAADAAIAAAAZABsAAAADAAIAAAAYABsAAAADAAIAAAAXABsAAAADAAIAAAAWABsAAAADAAIAAAAVABsAAAADAAIAAAAUABsAAAADAAIAAAATABsAAAADAAIAAAASABsAAAADAAIAAAARABsAAAADAAIAAAAQABsAAAADAAIAAAAPABsAAAADAAIAAAAOABsAAAADAAIAAAANABsAAAADAAIAAAAMABsAAAADAAIAAAALABsAAAADAAIAAAAKABsAAAADAAIAAAAJABsAAAADAAIAAAAIABsAAAADAAIAAAAHABsAAAADAAIAAAAGABsAAAADAAIAAAAFABsAAAADAAIAAAAEABsAAAADAAIAAAADABsAAAADAAIAAAACABsAAAADAAIAAAABABsAAAADAAIAAAAAABsAAAADAAIAAAD//xsAAAADAAIAAAD+/xsAAAADAAIAAAD9/xsAAAADAAIAAAD8//3/AAAEAAEAAAD8//7/AAAEAAEAAAD8////AAAEAAEAAAD8/wAAAAAEAAEAAAD8/wEAAAAEAAEAAAD8/wIAAAAEAAEAAAD8/wMAAAAEAAEAAAD8/wQAAAAEAAEAAAD8/wUAAAAEAAEAAAD8/wYAAAAEAAEAAAD8/wcAAAAEAAEAAAD8/wgAAAAEAAEAAAD8/wkAAAAEAAEAAAD8/woAAAAEAAEAAAD8/wsAAAAEAAEAAAD8/wwAAAAEAAEAAAD8/w0AAAAEAAEAAAD8/w4AAAAEAAEAAAD8/w8AAAAEAAEAAAD8/xAAAAAEAAEAAAD8/xEAAAAEAAEAAAD8/xIAAAAEAAEAAAD8/xMAAAAEAAEAAAD8/xQAAAAEAAEAAAD8/xUAAAAEAAEAAAD8/xYAAAAEAAEAAAD8/xcAAAAEAAEAAAD8/xgAAAAEAAEAAAD8/xkAAAAEAAEAAAD8/xoAAAAEAAEAAAD8/xsAAAAEAAIAAAAUAP3/AAAEAAEAAAAUAP7/AAAEAAEAAAAUAP//AAAEAAEAAAAUAAAAAAAEAAEAAAAUAAEAAAAEAAEAAAAUAAIAAAAEAAEAAAAUAAMAAAAEAAEAAAAUAAQAAAAEAAEAAAADAP3/AAAEAAEAAAADAP7/AAAEAAEAAAADAP//AAAEAAEAAAADAAAAAAAEAAEAAAADAAEAAAAEAAEAAAADAAIAAAAEAAEAAAADAAMAAAAEAAEAAAADAAQAAAAEAAEAAAADAAUAAAAEAAEAAAADAAYAAAAEAAEAAAADAAcAAAAEAAEAAAADAAgAAAAEAAEAAAADAAkAAAAEAAEAAAADAAoAAAAEAAEAAAAnAP7/AAAEAAEAAAAnAP3/AAAEAAEAAAAdAP3/AAAEAAEAAAAdAP7/AAAEAAEAAAAdAP//AAAEAAEAAAAdAAAAAAAEAAEAAAAdAAEAAAAEAAEAAAAdAAIAAAAEAAEAAAAdAAMAAAAEAAEAAAAdAAQAAAAEAAEAAAAdAAUAAAAEAAEAAAAdAAYAAAAEAAEAAAAdAAcAAAAEAAEAAAAdAAgAAAAEAAEAAAAKAP3/AAAEAAEAAAAKAP7/AAAEAAEAAAAKAP//AAAEAAEAAAAKAAAAAAAEAAEAAAAKAAEAAAAEAAEAAAAKAAIAAAAEAAEAAAAKAAMAAAAEAAEAAAAKAAQAAAAEAAEAAAAKAAUAAAAEAAEAAAAKAAYAAAAEAAEAAAAKAAcAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_t8g7d")

[node name="ParallaxBackground" parent="." instance=ExtResource("7_xtpgq")]
visible = false

[node name="Layer0" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAIAAAAAAABAAIAAAAfAAAAAAABAAIAAAAgAAAAAAABAAEAAAAhAAAAAAABAAEAAAAiAAEAAAABAAEAAAAiAAIAAAABAAEAAAAjAAIAAAABAAEAAAAjAAMAAAABAAEAAAAkAAQAAAABAAEAAAAkAAUAAAABAAEAAAAlAAYAAAABAAEAAAAlAAcAAAABAAEAAAAlAAgAAAABAAEAAAAlABMAAAABAAEAAAAlABQAAAABAAEAAAAlABUAAAABAAEAAAAkABcAAAABAAEAAAAkAAAAAAABAAEAAAAkAAEAAAABAAEAAAAkAAIAAAABAAEAAAAkAAMAAAABAAEAAAAkAAYAAAABAAEAAAAkAAcAAAABAAEAAAAkAAgAAAABAAEAAAAkAAkAAAABAAEAAAAkAAoAAAABAAEAAAAkAAsAAAABAAEAAAAkAAwAAAABAAEAAAAkAA0AAAABAAEAAAAkAA4AAAABAAEAAAAkAA8AAAABAAEAAAAlAA8AAAABAAEAAAAlAA4AAAABAAEAAAAlAA0AAAABAAEAAAAlAAwAAAABAAEAAAAlAAsAAAABAAEAAAAlAAoAAAABAAEAAAAlAAkAAAABAAEAAAAlAAUAAAABAAEAAAAlAAQAAAABAAEAAAAlAAMAAAABAAEAAAAlAAIAAAABAAEAAAAlAAEAAAABAAEAAAAlAAAAAAABAAEAAAAjAAEAAAABAAEAAAAjAAAAAAABAAEAAAAiAAAAAAABAAEAAAAhAAEAAAABAAEAAAAgAAEAAAABAAEAAAAgAAIAAAABAAEAAAAgAAMAAAABAAEAAAAgAAQAAAABAAEAAAAgAAUAAAABAAEAAAAgAAYAAAABAAEAAAAgAAcAAAABAAEAAAAgAAgAAAABAAEAAAAgAAkAAAABAAEAAAAgAAoAAAABAAEAAAAgAAsAAAABAAEAAAAgAAwAAAABAAEAAAAgAA0AAAABAAEAAAAgAA4AAAABAAEAAAAgAA8AAAABAAEAAAAgABAAAAABAAEAAAAgABEAAAABAAEAAAAgABIAAAABAAEAAAAgABMAAAABAAEAAAAgABQAAAABAAEAAAAgABUAAAABAAEAAAAgABYAAAABAAEAAAAgABcAAAABAAEAAAAjABcAAAABAAEAAAAiABcAAAABAAEAAAAkABYAAAABAAEAAAAjABYAAAABAAEAAAAhABcAAAABAAEAAAAhABYAAAABAAEAAAAhABUAAAABAAEAAAAhABQAAAABAAEAAAAhABMAAAABAAEAAAAhABIAAAABAAEAAAAhABEAAAABAAEAAAAhABAAAAABAAEAAAAhAA8AAAABAAEAAAAhAA4AAAABAAEAAAAiAA0AAAABAAEAAAAiAAwAAAABAAEAAAAiAAsAAAABAAEAAAAjAAoAAAABAAEAAAAjAAkAAAABAAEAAAAlABAAAAABAAEAAAAlABEAAAABAAEAAAAlABIAAAABAAEAAAAkABQAAAABAAEAAAAkABUAAAABAAEAAAAkABMAAAABAAEAAAAkABIAAAABAAEAAAAkABEAAAABAAEAAAAkABAAAAABAAEAAAAjABUAAAABAAEAAAAjABQAAAABAAEAAAAjABMAAAABAAEAAAAjABIAAAABAAEAAAAjABEAAAABAAEAAAAjABAAAAABAAEAAAAiABIAAAABAAEAAAAiABMAAAABAAEAAAAiABQAAAABAAEAAAAiABUAAAABAAEAAAAiABYAAAABAAEAAAAiABEAAAABAAEAAAAiABAAAAABAAEAAAAiAA8AAAABAAEAAAAiAA4AAAABAAEAAAAjAA8AAAABAAEAAAAjAA0AAAABAAEAAAAjAA4AAAABAAEAAAAjAAwAAAABAAEAAAAjAAsAAAABAAEAAAAjAAgAAAABAAEAAAAjAAcAAAABAAEAAAAjAAYAAAABAAEAAAAjAAUAAAABAAEAAAAjAAQAAAABAAEAAAAiAAMAAAABAAEAAAAiAAQAAAABAAEAAAAiAAUAAAABAAEAAAAhAAQAAAABAAEAAAAhAAMAAAABAAEAAAAhAAIAAAABAAEAAAAiAAYAAAABAAEAAAAiAAcAAAABAAEAAAAiAAgAAAABAAEAAAAiAAkAAAABAAEAAAAiAAoAAAABAAEAAAAhAAoAAAABAAEAAAAhAAsAAAABAAEAAAAhAAwAAAABAAEAAAAhAAkAAAABAAEAAAAhAAgAAAABAAEAAAAhAAcAAAABAAEAAAAhAAYAAAABAAEAAAAhAAUAAAABAAEAAAAhAA0AAAABAAEAAAAeAAAAAAABAAIAAAAdAAAAAAABAAIAAAAcAAAAAAABAAIAAAAbAAAAAAABAAIAAAAaAAAAAAABAAIAAAAZAAAAAAABAAIAAAAYAAAAAAABAAIAAAAXAAAAAAABAAIAAAAWAAAAAAABAAIAAAAVAAAAAAABAAIAAAAUAAAAAAABAAIAAAATAAAAAAABAAIAAAASAAAAAAABAAIAAAARAAAAAAABAAIAAAAQAAAAAAABAAIAAAAPAAAAAAABAAIAAAAOAAAAAAABAAIAAAANAAAAAAABAAIAAAAMAAAAAAABAAIAAAALAAAAAAABAAIAAAAKAAAAAAABAAIAAAAJAAAAAAABAAIAAAAIAAEAAAACAAEAAAAIAAIAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAACAAEAAAAIAAUAAAACAAEAAAAIAAYAAAACAAEAAAAIAAcAAAACAAEAAAAIAAgAAAACAAEAAAAIAAkAAAACAAEAAAAIAAoAAAACAAEAAAAIAAsAAAACAAEAAAAIAAwAAAACAAEAAAAIAA0AAAACAAEAAAAIAA4AAAACAAEAAAAIAA8AAAACAAEAAAAIABAAAAACAAEAAAAIABEAAAACAAEAAAAIABIAAAACAAEAAAAIABMAAAACAAEAAAAIABQAAAACAAEAAAAIABUAAAACAAEAAAAIABYAAAACAAEAAAAIABcAAAACAAEAAAAJABcAAAABAAAAAAAKABcAAAABAAAAAAALABcAAAABAAAAAAAMABcAAAABAAAAAAANABcAAAABAAAAAAAOABcAAAABAAAAAAAPABcAAAABAAAAAAAQABcAAAABAAAAAAARABcAAAABAAAAAAASABcAAAABAAAAAAATABcAAAABAAAAAAAUABcAAAABAAAAAAAVABcAAAABAAAAAAAWABcAAAABAAAAAAAXABcAAAABAAAAAAAYABcAAAABAAAAAAAZABcAAAABAAAAAAAaABcAAAABAAAAAAAbABcAAAABAAAAAAAcABcAAAABAAAAAAAdABcAAAABAAAAAAAeABcAAAABAAAAAAAfABcAAAAAAAEAAAAfABYAAAAAAAEAAAAfABUAAAAAAAEAAAAfABQAAAAAAAEAAAAfABMAAAAAAAEAAAAfABIAAAAAAAEAAAAfABEAAAAAAAEAAAAfABAAAAAAAAEAAAAfAA8AAAAAAAEAAAAfAA4AAAAAAAEAAAAfAA0AAAAAAAEAAAAfAAwAAAAAAAEAAAAfAAsAAAAAAAEAAAAfAAoAAAAAAAEAAAAfAAkAAAAAAAEAAAAfAAgAAAAAAAEAAAAfAAcAAAAAAAEAAAAfAAYAAAAAAAEAAAAfAAUAAAAAAAEAAAAfAAQAAAAAAAEAAAAfAAMAAAAAAAEAAAAfAAIAAAAAAAEAAAAfAAEAAAAAAAEAAAAHABcAAAABAAEAAAAGABcAAAABAAEAAAAFABcAAAABAAEAAAAEABcAAAABAAEAAAADABcAAAABAAEAAAACABcAAAABAAEAAAABABcAAAABAAEAAAAAABcAAAABAAEAAAAAABYAAAABAAEAAAAAABUAAAABAAEAAAAAABQAAAABAAEAAAAAABMAAAABAAEAAAAAABIAAAABAAEAAAAAABEAAAABAAEAAAAAABAAAAABAAEAAAAAAA8AAAABAAEAAAAAAA4AAAABAAEAAAAAAA0AAAABAAEAAAAAAAwAAAABAAEAAAAAAAsAAAABAAEAAAAAAAoAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAABAAEAAAAAAAcAAAABAAEAAAAAAAYAAAABAAEAAAAAAAUAAAABAAEAAAAAAAQAAAABAAEAAAAAAAMAAAABAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAEAAAAAAAAAAAABAAEAAAABAAAAAAABAAEAAAACAAAAAAABAAEAAAADAAAAAAABAAEAAAAEAAAAAAABAAEAAAAFAAAAAAABAAEAAAAGAAAAAAABAAEAAAAHAAAAAAABAAEAAAADAA4AAAABAAEAAAADAA0AAAABAAEAAAADAAwAAAABAAEAAAADAAsAAAABAAEAAAADAAoAAAABAAEAAAADAAkAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAEAAAADAAYAAAABAAEAAAADAAUAAAABAAEAAAADAAQAAAABAAEAAAADAAMAAAABAAEAAAADAAIAAAABAAEAAAADAAEAAAABAAEAAAACAAEAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAABAAcAAAABAAEAAAABAAgAAAABAAEAAAABAAkAAAABAAEAAAABAAoAAAABAAEAAAABAAsAAAABAAEAAAABAAwAAAABAAEAAAABAA0AAAABAAEAAAABAA4AAAABAAEAAAABAA8AAAABAAEAAAABABAAAAABAAEAAAABABEAAAABAAEAAAABABIAAAABAAEAAAABABMAAAABAAEAAAABABQAAAABAAEAAAABABUAAAABAAEAAAABABYAAAABAAEAAAACABYAAAABAAEAAAACABUAAAABAAEAAAACABQAAAABAAEAAAACABMAAAABAAEAAAACABIAAAABAAEAAAACABEAAAABAAEAAAACABAAAAABAAEAAAACAA8AAAABAAEAAAACAA4AAAABAAEAAAACAA0AAAABAAEAAAACAAwAAAABAAEAAAACAAsAAAABAAEAAAACAAoAAAABAAEAAAACAAkAAAABAAEAAAACAAgAAAABAAEAAAACAAcAAAABAAEAAAACAAYAAAABAAEAAAACAAUAAAABAAEAAAACAAQAAAABAAEAAAACAAMAAAABAAEAAAACAAIAAAABAAEAAAADAA8AAAABAAEAAAADABAAAAABAAEAAAADABEAAAABAAEAAAADABIAAAABAAEAAAADABMAAAABAAEAAAADABQAAAABAAEAAAADABUAAAABAAEAAAADABYAAAABAAEAAAAEABYAAAABAAEAAAAEABUAAAABAAEAAAAEABQAAAABAAEAAAAEABMAAAABAAEAAAAEABIAAAABAAEAAAAEABEAAAABAAEAAAAEABAAAAABAAEAAAAEAA8AAAABAAEAAAAEAA4AAAABAAEAAAAEAA0AAAABAAEAAAAEAAwAAAABAAEAAAAEAAsAAAABAAEAAAAEAAoAAAABAAEAAAAEAAkAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAABAAEAAAAEAAYAAAABAAEAAAAEAAUAAAABAAEAAAAEAAQAAAABAAEAAAAEAAMAAAABAAEAAAAEAAIAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAFAAgAAAABAAEAAAAFAAkAAAABAAEAAAAFAAoAAAABAAEAAAAFAAsAAAABAAEAAAAFAAwAAAABAAEAAAAFAA0AAAABAAEAAAAFAA4AAAABAAEAAAAFAA8AAAABAAEAAAAFABAAAAABAAEAAAAFABEAAAABAAEAAAAFABIAAAABAAEAAAAFABMAAAABAAEAAAAFABQAAAABAAEAAAAFABUAAAABAAEAAAAFABYAAAABAAEAAAAGABYAAAABAAEAAAAGABUAAAABAAEAAAAGABQAAAABAAEAAAAGABMAAAABAAEAAAAGABIAAAABAAEAAAAGABEAAAABAAEAAAAGABAAAAABAAEAAAAGAA8AAAABAAEAAAAGAA4AAAABAAEAAAAGAA0AAAABAAEAAAAGAAwAAAABAAEAAAAGAAsAAAABAAEAAAAGAAoAAAABAAEAAAAGAAkAAAABAAEAAAAGAAgAAAABAAEAAAAGAAcAAAABAAEAAAAGAAYAAAABAAEAAAAGAAUAAAABAAEAAAAGAAQAAAABAAEAAAAGAAMAAAABAAEAAAAGAAIAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAHAAgAAAABAAEAAAAHAAkAAAABAAEAAAAHAAoAAAABAAEAAAAHAAsAAAABAAEAAAAHAAwAAAABAAEAAAAHAA0AAAABAAEAAAAHAA4AAAABAAEAAAAHAA8AAAABAAEAAAAHABAAAAABAAEAAAAHABEAAAABAAEAAAAHABIAAAABAAEAAAAHABMAAAABAAEAAAAHABQAAAABAAEAAAAHABUAAAABAAEAAAAHABYAAAABAAEAAAAmAAAAAAABAAEAAAAnAAAAAAABAAEAAAAmAAEAAAABAAEAAAAmAAIAAAABAAEAAAAmAAMAAAABAAEAAAAmAAQAAAABAAEAAAAmAAUAAAABAAEAAAAmAAYAAAABAAEAAAAmAAcAAAABAAEAAAAmAAgAAAABAAEAAAAmAAkAAAABAAEAAAAmAAoAAAABAAEAAAAmAAsAAAABAAEAAAAmAAwAAAABAAEAAAAmAA0AAAABAAEAAAAmAA4AAAABAAEAAAAmAA8AAAABAAEAAAAmABAAAAABAAEAAAAmABEAAAABAAEAAAAmABIAAAABAAEAAAAmABMAAAABAAEAAAAmABQAAAABAAEAAAAmABUAAAABAAEAAAAmABYAAAABAAEAAAAmABcAAAABAAEAAAAnAAEAAAABAAEAAAAnAAIAAAABAAEAAAAnAAMAAAABAAEAAAAnAAQAAAABAAEAAAAnAAUAAAABAAEAAAAnAAYAAAABAAEAAAAnAAcAAAABAAEAAAAnAAgAAAABAAEAAAAnAAkAAAABAAEAAAAnAAoAAAABAAEAAAAnAAsAAAABAAEAAAAnAAwAAAABAAEAAAAnAA0AAAABAAEAAAAnAA4AAAABAAEAAAAnAA8AAAABAAEAAAAnABAAAAABAAEAAAAnABEAAAABAAEAAAAnABIAAAABAAEAAAAnABMAAAABAAEAAAAnABQAAAABAAEAAAAnABUAAAABAAEAAAAnABYAAAABAAEAAAAnABcAAAABAAEAAAAlABcAAAABAAEAAAAlABYAAAABAAEAAAD/////AAABAAEAAAD//wAAAAABAAEAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAD//wMAAAABAAEAAAD//wQAAAABAAEAAAD//wUAAAABAAEAAAD//wYAAAABAAEAAAD//wcAAAABAAEAAAD//wgAAAABAAEAAAD//wkAAAABAAEAAAD//woAAAABAAEAAAD//wsAAAABAAEAAAD//wwAAAABAAEAAAD//w0AAAABAAEAAAD//w4AAAABAAEAAAD//w8AAAABAAEAAAD//xAAAAABAAEAAAD//xEAAAABAAEAAAD//xIAAAABAAEAAAD//xMAAAABAAEAAAD//xQAAAABAAEAAAD//xUAAAABAAEAAAD//xYAAAABAAEAAAD//xcAAAABAAEAAAD//xgAAAABAAEAAAAAABgAAAABAAEAAAABABgAAAABAAEAAAACABgAAAABAAEAAAADABgAAAABAAEAAAAEABgAAAABAAEAAAAFABgAAAABAAEAAAAGABgAAAABAAEAAAAHABgAAAABAAEAAAAIABgAAAABAAEAAAAJABgAAAABAAEAAAAKABgAAAABAAEAAAALABgAAAABAAEAAAAMABgAAAABAAEAAAANABgAAAABAAEAAAAOABgAAAABAAEAAAAPABgAAAABAAEAAAAQABgAAAABAAEAAAARABgAAAABAAEAAAASABgAAAABAAEAAAATABgAAAABAAEAAAAUABgAAAABAAEAAAAVABgAAAABAAEAAAAWABgAAAABAAEAAAAXABgAAAABAAEAAAAYABgAAAABAAEAAAAZABgAAAABAAEAAAAaABgAAAABAAEAAAAbABgAAAABAAEAAAAcABgAAAABAAEAAAAdABgAAAABAAEAAAAeABgAAAABAAEAAAAfABgAAAABAAEAAAAgABgAAAABAAEAAAAhABgAAAABAAEAAAAiABgAAAABAAEAAAAjABgAAAABAAEAAAAkABgAAAABAAEAAAAlABgAAAABAAEAAAAmABgAAAABAAEAAAAnABgAAAABAAEAAAAoABgAAAABAAEAAAAoABcAAAABAAEAAAAoABYAAAABAAEAAAAoABUAAAABAAEAAAAoABQAAAABAAEAAAAoABMAAAABAAEAAAAoABIAAAABAAEAAAAoABEAAAABAAEAAAAoABAAAAABAAEAAAAoAA8AAAABAAEAAAAoAA4AAAABAAEAAAAoAA0AAAABAAEAAAAoAAwAAAABAAEAAAAoAAsAAAABAAEAAAAoAAoAAAABAAEAAAAoAAkAAAABAAEAAAAoAAgAAAABAAEAAAAoAAcAAAABAAEAAAAoAAYAAAABAAEAAAAoAAUAAAABAAEAAAAoAAQAAAABAAEAAAAoAAMAAAABAAEAAAAoAAIAAAABAAEAAAAoAAEAAAABAAEAAAAoAAAAAAABAAEAAAAoAP//AAABAAEAAAAnAP//AAABAAEAAAAmAP//AAABAAEAAAAlAP//AAABAAEAAAAkAP//AAABAAEAAAAjAP//AAABAAEAAAAiAP//AAABAAEAAAAhAP//AAABAAEAAAAgAP//AAABAAEAAAAfAP//AAABAAEAAAAeAP//AAABAAEAAAAdAP//AAABAAEAAAAcAP//AAABAAEAAAAbAP//AAABAAEAAAAaAP//AAABAAEAAAAZAP//AAABAAEAAAAYAP//AAABAAEAAAAXAP//AAABAAEAAAAWAP//AAABAAEAAAAVAP//AAABAAEAAAAUAP//AAABAAEAAAATAP//AAABAAEAAAASAP//AAABAAEAAAARAP//AAABAAEAAAAQAP//AAABAAEAAAAPAP//AAABAAEAAAAOAP//AAABAAEAAAANAP//AAABAAEAAAAMAP//AAABAAEAAAALAP//AAABAAEAAAAKAP//AAABAAEAAAAJAP//AAABAAEAAAAIAP//AAABAAEAAAAHAP//AAABAAEAAAAGAP//AAABAAEAAAAFAP//AAABAAEAAAAEAP//AAABAAEAAAADAP//AAABAAEAAAACAP//AAABAAEAAAABAP//AAABAAEAAAAAAP//AAABAAEAAAD//xkAAAABAAEAAAD//xoAAAABAAEAAAD//xsAAAABAAEAAAAAABkAAAABAAEAAAAAABoAAAABAAEAAAAAABsAAAABAAEAAAABABkAAAABAAEAAAABABoAAAABAAEAAAABABsAAAABAAEAAAACABkAAAABAAEAAAACABoAAAABAAEAAAACABsAAAABAAEAAAADABkAAAABAAEAAAADABoAAAABAAEAAAADABsAAAABAAEAAAAEABkAAAABAAEAAAAEABoAAAABAAEAAAAEABsAAAABAAEAAAAFABkAAAABAAEAAAAFABoAAAABAAEAAAAFABsAAAABAAEAAAAGABkAAAABAAEAAAAGABoAAAABAAEAAAAGABsAAAABAAEAAAAHABkAAAABAAEAAAAHABoAAAABAAEAAAAHABsAAAABAAEAAAAIABkAAAABAAEAAAAIABoAAAABAAEAAAAIABsAAAABAAEAAAAJABkAAAABAAEAAAAJABoAAAABAAEAAAAJABsAAAABAAEAAAAKABkAAAABAAEAAAAKABoAAAABAAEAAAAKABsAAAABAAEAAAALABkAAAABAAEAAAALABoAAAABAAEAAAALABsAAAABAAEAAAAMABkAAAABAAEAAAAMABoAAAABAAEAAAAMABsAAAABAAEAAAANABkAAAABAAEAAAANABoAAAABAAEAAAANABsAAAABAAEAAAAOABkAAAABAAEAAAAOABoAAAABAAEAAAAOABsAAAABAAEAAAAPABkAAAABAAEAAAAPABoAAAABAAEAAAAPABsAAAABAAEAAAAQABkAAAABAAEAAAAQABoAAAABAAEAAAAQABsAAAABAAEAAAARABkAAAABAAEAAAARABoAAAABAAEAAAARABsAAAABAAEAAAASABkAAAABAAEAAAASABoAAAABAAEAAAASABsAAAABAAEAAAATABkAAAABAAEAAAATABoAAAABAAEAAAATABsAAAABAAEAAAAUABkAAAABAAEAAAAUABoAAAABAAEAAAAUABsAAAABAAEAAAAVABkAAAABAAEAAAAVABoAAAABAAEAAAAVABsAAAABAAEAAAAWABkAAAABAAEAAAAWABoAAAABAAEAAAAWABsAAAABAAEAAAAXABkAAAABAAEAAAAXABoAAAABAAEAAAAXABsAAAABAAEAAAAYABkAAAABAAEAAAAYABoAAAABAAEAAAAYABsAAAABAAEAAAAZABkAAAABAAEAAAAZABoAAAABAAEAAAAZABsAAAABAAEAAAAaABkAAAABAAEAAAAaABoAAAABAAEAAAAaABsAAAABAAEAAAAbABkAAAABAAEAAAAbABoAAAABAAEAAAAbABsAAAABAAEAAAAcABkAAAABAAEAAAAcABoAAAABAAEAAAAcABsAAAABAAEAAAAdABkAAAABAAEAAAAdABoAAAABAAEAAAAdABsAAAABAAEAAAAeABkAAAABAAEAAAAeABoAAAABAAEAAAAeABsAAAABAAEAAAAfABkAAAABAAEAAAAfABoAAAABAAEAAAAfABsAAAABAAEAAAAgABkAAAABAAEAAAAgABoAAAABAAEAAAAgABsAAAABAAEAAAAhABkAAAABAAEAAAAhABoAAAABAAEAAAAhABsAAAABAAEAAAAiABkAAAABAAEAAAAiABoAAAABAAEAAAAiABsAAAABAAEAAAAjABkAAAABAAEAAAAjABoAAAABAAEAAAAjABsAAAABAAEAAAAkABkAAAABAAEAAAAkABoAAAABAAEAAAAkABsAAAABAAEAAAAlABkAAAABAAEAAAAlABoAAAABAAEAAAAlABsAAAABAAEAAAAmABkAAAABAAEAAAAmABoAAAABAAEAAAAmABsAAAABAAEAAAAnABkAAAABAAEAAAAnABoAAAABAAEAAAAnABsAAAABAAEAAAAoABkAAAABAAEAAAAoABoAAAABAAEAAAAoABsAAAABAAEAAAA=")
tile_set = SubResource("TileSet_34k6y")
use_kinematic_bodies = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 384

[node name="BloodTimerUI" type="Node2D" parent="."]
script = ExtResource("10_wl1dn")

[node name="BloodTimer" type="Timer" parent="BloodTimerUI"]
wait_time = 5.0
autostart = true

[node name="BloodTimerBar" type="TextureProgressBar" parent="BloodTimerUI"]
offset_left = 570.0
offset_top = 7.0
offset_right = 610.0
offset_bottom = 391.0
max_value = 5.0
step = 0.1
value = 5.0
fill_mode = 3
texture_under = ExtResource("11_6qbs6")
texture_progress = ExtResource("12_bnk7l")

[node name="BloodTimerLabel" type="Label" parent="BloodTimerUI"]
offset_left = 724.0
offset_top = 31.0
offset_right = 764.0
offset_bottom = 54.0

[node name="MarkerCenter" type="Marker2D" parent="."]
position = Vector2(320, 192)
script = ExtResource("1_5lft7")

[node name="ButtonStart" type="Button" parent="."]
texture_filter = 1
offset_left = 226.0
offset_top = 142.0
offset_right = 266.0
offset_bottom = 169.0
theme_override_fonts/font = ExtResource("11_kqba4")
text = "
Start
"

[node name="ButtonQuit" type="Button" parent="."]
texture_filter = 1
offset_left = 359.0
offset_top = 140.0
offset_right = 399.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("11_kqba4")
text = "
quit
"

[connection signal="timeout" from="BloodTimerUI/BloodTimer" to="BloodTimerUI" method="_on_blood_timer_timeout"]
[connection signal="pressed" from="ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
